HBASE-1630 Provide sample config options to enable GC debugging
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@792383 13f79535-47bb-0310-9956-ffa450edef68